# IR2134

./: .gitignore  README.md
buildings/: estce.building.yaml  make_copies.sh  vamoaver.building.yaml  vamoaver.dfghjkbuilding.yaml  vamoaver.world
buildings/models/AdjTable_004/: model.config
buildings/models/AdjTable_006/: model.config
buildings/models/AdjTable_017/: model.config
buildings/models/AdjTable_022/: model.sdf
buildings/models/AdjTable_023/: model.sdf
first_project/: .rmf_schedule_node.yaml
first_project/install/: setup.sh
first_project/log/: latest_build
office4/: metadata.yaml
office9/: metadata.yaml
rmf_ws/: .rmf_schedule_node.yaml  Instrucciones
rmf_ws/buildings/: first.building.yaml  first.world
rmf_ws/log/: latest_build  latest_list
rmf_ws/src/first_project/: CMakeLists.txt
rmf_ws/src/first_project/config/: tinyRobot_config.yaml
rmf_ws/src/first_project/install/: local_setup.sh  setup.sh
rmf_ws/src/first_project/install/first_project/share/first_project/: local_setup.sh  package.ps1
rmf_ws/src/first_project/launch/: first.launch.xml  simulation.launch.xml
rmf_ws/src/first_project/log/: latest_build
rmf_ws/src/first_project/maps/first/: 0.yaml  first.building.yaml
rmf_ws/src/first_project/maps/first/nav_graphs/: 0.yaml
rmf_ws/src/first_project/maps/first_ign/: first.world
rmf_ws/src/first_project/maps/first_ign/models/first_L1/: model.sdf
rmf_ws/src/first_project/maps/first_ign/models/first_L1/meshes/: model.material
rmf_ws/src/first_project/maps/first_ign/models/first_L2/: model.sdf
(+2190 files in other folders)
